add swagger comment for create user
