# docs/swagger.json
@@ -21,6 +21,26 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/user": {
+            "post": {
+                "description": "create a user",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "create a user",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/user/:userId": {
             "delete": {
                 "description": "delete a user",
